會員已完成woof手機改完

--- a/Account_mao_coin.html
+++ b/Account_mao_coin.html
@@ -26,6 +26,7 @@
     <link rel="stylesheet" href="./css/Account/account_main_left.css">
     <link rel="stylesheet" href="./css/Account/Account_mao_coin.css">
 
+    <link rel="stylesheet" href="./css/Account/Account_mao_coin_mobile.css">
     <title>PetLove 派樂星球</title>
     <style>
 
@@ -998,9 +999,29 @@
                         </g>
                     </svg>
                 </div>
+                <div class="l_mao_coin_title_mobile">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="276" height="56" viewBox="0 0 276 56">
+                        <g id="Group_153" data-name="Group 153" transform="translate(-715 -268)">
+                            <text id="毛金幣管理" transform="translate(750 294)" fill="#89a7c2" font-size="24"
+                                font-family="YuGothicUI-Regular, Yu Gothic UI">
+                                <tspan x="0" y="0">毛金幣管理</tspan>
+                            </text>
+                            <text id="Mao_Coins_Management" data-name="Mao Coins Management"
+                                transform="translate(759 318)" fill="#89a7c2" font-size="16"
+                                font-family="Poppins-ExtraLight, Poppins" font-weight="200">
+                                <tspan x="0" y="0">Mao Coins Management</tspan>
+                            </text>
+                            <rect id="Rectangle_111" data-name="Rectangle 111" width="30" height="1"
+                                transform="translate(715 284)" fill="#89a7c2" />
+                            <rect id="Rectangle_165" data-name="Rectangle 165" width="30" height="1"
+                                transform="translate(961 312)" fill="#89a7c2" />
+                        </g>
+                    </svg>
+
+                </div>
                 <div class="l_show_coin">
                     <svg class="l_maoCoins">
-                        <use xlink:href="./images/Index/icomoon/symbol-defs.svg#maoCoins"></use>
+                        <use xlink:href="./images/index/icomoon/symbol-defs.svg#maoCoins"></use>
                     </svg>
                     <div class="l_coin_return">50</div>
                     <div class="l_mark">毛金幣 (NT$ 50)</div>
@@ -1017,6 +1038,10 @@
                     </ul>
                     <div class="l_coin_line">
                         <div class="l_coin_bottomline">
+                        </div>
+                    </div>
+                    <div class="l_coin_line_mobile">
+                        <div class="l_coin_bottomline_mobile">
                         </div>
                     </div>
                 </div>
@@ -1046,7 +1071,7 @@
                                 <div class="l_record_return">20201226422879訂單折抵</div>
                                 <div class="l_points_return">+22</div>
                                 <div class="l_date_return">2020/12/26</div>
-                                <div class="l_expiry_return">2020/12/26</div>
+                                <div class="l_expiry_return"> <span>到期日</span> 2020/12/26</div>
                             </div>
                             <div class="l_coin_detail_line"></div>
 
@@ -1056,7 +1081,7 @@
                                 <div class="l_record_return">20201226422879訂單折抵</div>
                                 <div class="l_points_return">-1</div>
                                 <div class="l_date_return">2020/12/26</div>
-                                <div class="l_expiry_return"></div>
+                                <div class="l_expiry_return"> </div>
                             </div>
                             <div class="l_coin_detail_line"></div>
 
@@ -1069,7 +1094,7 @@
                                 <div class="l_record_return">20201226422879訂單折抵</div>
                                 <div class="l_points_return">+1</div>
                                 <div class="l_date_return">2020/12/26</div>
-                                <div class="l_expiry_return">2020/12/26</div>
+                                <div class="l_expiry_return"><span>到期日</span> 2020/12/26</div>
                             </div>
                             <div class="l_coin_detail_line"></div>
 
@@ -1079,7 +1104,7 @@
                                 <div class="l_record_return">20201226422879訂單折抵</div>
                                 <div class="l_points_return">+1</div>
                                 <div class="l_date_return">2020/12/26</div>
-                                <div class="l_expiry_return">2020/12/26</div>
+                                <div class="l_expiry_return"><span>到期日</span>2020/12/26</div>
                             </div>
                             <div class="l_coin_detail_line"></div>
 
@@ -1089,7 +1114,7 @@
                                 <div class="l_record_return">20201226422879訂單折抵</div>
                                 <div class="l_points_return">+1</div>
                                 <div class="l_date_return">2020/12/26</div>
-                                <div class="l_expiry_return">2020/12/26</div>
+                                <div class="l_expiry_return"><span>到期日</span> 2020/12/26</div>
                             </div>
                             <div class="l_coin_detail_line"></div>
 
