--- a/booking_Selection.html
+++ b/booking_Selection.html
@@ -896,21 +896,21 @@
                     <a class="nav-link l_woof" id="pills-home-tab" data-toggle="pill" href="#pills-home" role="tab"
                         aria-controls="pills-home" aria-selected="true">
                         <svg class="l_hostel-1-logo">
-                            <use xlink:href="./images/Index/icomoon/symbol-defs.svg#hostel-1-logo"></use>
+                            <use xlink:href="./images/index/icomoon/symbol-defs.svg#hostel-1-logo"></use>
 
                         </svg>沃夫寵物生活館</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link l_mumao" id="pills-profile-tab" data-toggle="pill" href="#pills-profile"
                         role="tab" aria-controls="pills-profile" aria-selected="false"><svg class="l_hostel-2-logo">
-                            <use xlink:href="./images/Index/icomoon/symbol-defs.svg#hostel-2-logo"></use>
+                            <use xlink:href="./images/index/icomoon/symbol-defs.svg#hostel-2-logo"></use>
                         </svg>牧貓精品寵物旅館</a>
                 </li>
                 <li class="nav-item ">
                     <a class="nav-link l_sonemore" id="pills-contact-tab" data-toggle="pill" href="#pills-contact"
                         role="tab" aria-controls="pills-contact" aria-selected="false">
                         <svg class="l_hostel-3-logo">
-                            <use xlink:href="./images/Index/icomoon/symbol-defs.svg#hostel-3-logo"></use>
+                            <use xlink:href="./images/index/icomoon/symbol-defs.svg#hostel-3-logo"></use>
                         </svg>三毛寵物旅館</a>
                 </li>
             </ul>
@@ -1003,7 +1003,7 @@
             <a class="btn btn-secondary dropdown-toggle l_hotel_name" href="#" role="button" id="dropdownMenuLink"
                 data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" value="">
                 <svg class="l_hostel-1-logo">
-                    <use xlink:href="./images/Index/icomoon/symbol-defs.svg#hostel-1-logo"></use>
+                    <use xlink:href="./images/index/icomoon/symbol-defs.svg#hostel-1-logo"></use>
 
                 </svg>沃夫寵物生活館
             </a>
@@ -1012,20 +1012,20 @@
 
                 <a class="dropdown-item l_hotel_name1" value="l_hostel-1" href="#pills-contact"><svg
                         class="l_hostel-1-logo">
-                        <use xlink:href="./images/Index/icomoon/symbol-defs.svg#hostel-1-logo"></use>
+                        <use xlink:href="./images/index/icomoon/symbol-defs.svg#hostel-1-logo"></use>
 
                     </svg>沃夫寵物生活館
                 </a>
 
                 <a class="dropdown-item l_hotel_name2" value="l_hostel-2" href="#pills-contact"><svg
                         class="l_hostel-2-logo">
-                        <use xlink:href="./images/Index/icomoon/symbol-defs.svg#hostel-2-logo"></use>
+                        <use xlink:href="./images/index/icomoon/symbol-defs.svg#hostel-2-logo"></use>
                     </svg>牧貓精品寵物旅館
                 </a>
 
                 <a class="dropdown-item l_hotel_name3" value="l_hostel-3" href="#pills-contact">
                     <svg class="l_hostel-3-logo">
-                        <use xlink:href="./images/Index/icomoon/symbol-defs.svg#hostel-3-logo"></use>
+                        <use xlink:href="./images/index/icomoon/symbol-defs.svg#hostel-3-logo"></use>
                     </svg>三毛寵物旅館
                 </a>
             </div>
@@ -1130,8 +1130,8 @@
 
     <div class="footer ">
         <div class="l_footer_img">
-            <div class="l_footer_dog"><img src="./images/Index/dog-02.png" alt=""></div>
-            <div class="l_footer_cat"><img src="./images/Index/cat_2.png" alt=""></div>
+            <div class="l_footer_dog"><img src="./images/index/dog-02.png" alt=""></div>
+            <div class="l_footer_cat"><img src="./images/index/cat_2.png" alt=""></div>
 
         </div>
 
