會員已完成woof手機改完

--- a/my_account.html
+++ b/my_account.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="./css/0_main/bootstrap.min.css" type="text/css" />
   <link rel="stylesheet" href="./css/0_main/navbar/web/style.css">
   <link rel="stylesheet" href="./css/0_main/navbar/mobile/style.css">
-
+  <link href="https://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css" rel="stylesheet" />
 
 
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600&display=swap" rel="stylesheet">
@@ -19,8 +19,12 @@
     href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@100;300;400;500;700&family=Poppins:wght@200;300;400;500;600&display=swap"
     rel="stylesheet">
 
+  <link
+    href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@100;300;400;500;700&family=Poppins:wght@200;300;400;500;600&display=swap"
+    rel="stylesheet">
 
-  <link rel="stylesheet" href="https://unpkg.com/flickity@2/dist/flickity.min.css">
+
+  <link rel="stylesheet" href="./css/0_main/flickity.css">
 
   <link rel="stylesheet" href="./css/Account/account_main_left.css">
 
@@ -5320,6 +5324,10 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.js"></script>
   <script src="https://netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
 
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js"
+    integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous">
+    </script>
+
   <script src="./js/0_main/jquery-3.5.1.js"></script>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js"
@@ -5331,7 +5339,7 @@
 
   <script src="./js/0_main/bootstrap.bundle.min.js"></script>
 
-  <script src="https://unpkg.com/flickity@2/dist/flickity.pkgd.min.js"></script>
+  <script src="./js/0_main/flickity.pkgd.min.js"></script>
 
   <script src="./js/Account/account_main_left.js"></script>
   <!-- 地址 -->
