--- a/my_account.html
+++ b/my_account.html
@@ -8,22 +8,26 @@
 
   <link rel="stylesheet" href="./css/0_main/reset.css" type="text/css" />
   <link rel="stylesheet" href="./css/0_main/bootstrap.min.css" type="text/css" />
-  <link rel="stylesheet" href="./css/0_main/navbar/web/style.css">
   <link rel="stylesheet" href="./css/0_main/navbar/mobile/style.css">
-  <link href="https://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css" rel="stylesheet" />
+  <link rel="stylesheet" href="./css/0_main/navbar/web/style.css">
+
+
+
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-wEmeIV1mKuiNpC+IOBjI7aAzPcEZeedi5yW5f2yOq55WWLwNGmvvx4Um1vskeMj0" crossorigin="anonymous">
+
 
 
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600&display=swap" rel="stylesheet">
 
+
+
   <link
     href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@100;300;400;500;700&family=Poppins:wght@200;300;400;500;600&display=swap"
     rel="stylesheet">
 
-  <link
-    href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@100;300;400;500;700&family=Poppins:wght@200;300;400;500;600&display=swap"
-    rel="stylesheet">
 
-
+  <link rel="stylesheet" href="https://unpkg.com/flickity@2/dist/flickity.min.css">
   <link rel="stylesheet" href="./css/0_main/flickity.css">
 
   <link rel="stylesheet" href="./css/Account/account_main_left.css">
@@ -45,7 +49,9 @@
 
   <title>PetLove 派樂星球</title>
   <style>
-
+    body {
+      color: #707070;
+    }
   </style>
 </head>
 
@@ -776,10 +782,10 @@
       <div class="l_member_name">毛毛</div>
     </div>
     <div class="l_user_order">
-      <li class="l_btn_account" style="list-style: none;"><a href="#l_main_right">我的帳戶</a></li>
-      <li class="l_btn_order " style="list-style: none;"><a href="#l_main_right">訂單管理</a></li>
-      <li class="l_btn_favorite" style="list-style: none;"><a href="#l_main_right">我的最愛</a></li>
-      <li class="l_btn_coin " style="list-style: none;"><a href="#l_main_right">毛金幣管理</a></li>
+      <li class="l_btn_account_m" style="list-style: none;"><a href="#l_main_right">我的帳戶</a></li>
+      <li class="l_btn_order_m " style="list-style: none;"><a href="#l_main_right">訂單管理</a></li>
+      <li class="l_btn_favorite_m" style="list-style: none;"><a href="#l_main_right">我的最愛</a></li>
+      <li class="l_btn_coin_m " style="list-style: none;"><a href="#l_main_right">毛金幣管理</a></li>
     </div>
 
   </div>
@@ -817,13 +823,14 @@
         <div class="card-header" id="headingThree">
           <h2 class="mb-0">
             <button class="btn btn-link collapsed onefloor" type="button" data-toggle="collapse"
-              data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+              data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree"
+              style="text-decoration: none;">
               會員中心
             </button>
           </h2>
         </div>
         <div class="l_line"></div>
-        <div id="collapseThree" class="collapse in" aria-labelledby="headingThree" data-parent="#accordionExample">
+        <div id="collapseThree" class="in collapse show" aria-labelledby="headingThree" data-parent="#accordionExample">
           <div class="card-body">
 
 
@@ -835,7 +842,8 @@
               <div class="card-header" id="headingFive">
                 <h2 class="mb-0">
                   <button class="btn btn-link collapsed twofloor" type="button" data-toggle="collapse"
-                    data-target="#collapseFive" aria-expanded="false" aria-controls="collapseFive">
+                    data-target="#collapseFive" aria-expanded="false" aria-controls="collapseFive"
+                    style="text-decoration: none;">
                     我的帳戶
                   </button>
                 </h2>
@@ -848,7 +856,7 @@
                   <!-- 內層個人檔案 -->
                   <div class="card l_threefloor">
 
-                    <button class="btn btn-link collapsed threefloor l_btn_account">
+                    <button class="btn btn-link collapsed threefloor l_btn_account" style="text-decoration: none;">
                       個人檔案
                     </button>
 
@@ -867,7 +875,7 @@
                   <!-- 內層更改密碼 -->
                   <div class="card l_threefloor">
 
-                    <button class="btn btn-link collapsed threefloor l_btn_password  ">
+                    <button class="btn btn-link collapsed threefloor l_btn_password  " style="text-decoration: none;">
                       更改密碼
                     </button>
 
@@ -894,7 +902,8 @@
               <div class="card-header" id="headingSix"></div>
               <h2 class="mb-0">
                 <button class="btn btn-link collapsed twofloor" type="button" data-toggle="collapse"
-                  data-target="#collapseSix" aria-expanded="false" aria-controls="collapseSix">
+                  data-target="#collapseSix" aria-expanded="false" aria-controls="collapseSix"
+                  style="text-decoration: none;">
                   訂單管理
                 </button>
               </h2>
@@ -909,7 +918,7 @@
                 <div class="card l_threefloor">
 
 
-                  <button class="btn btn-link collapsed threefloor l_btn_order  ">
+                  <button class="btn btn-link collapsed threefloor l_btn_order  " style="text-decoration: none;">
                     訂單管理
                   </button>
 
@@ -927,7 +936,7 @@
                 <div class="card l_threefloor">
 
 
-                  <button class="btn btn-link collapsed threefloor l_btn_subscription">
+                  <button class="btn btn-link collapsed threefloor l_btn_subscription" style="text-decoration: none;">
                     週期訂單
                   </button>
 
@@ -946,7 +955,7 @@
                 <div class="card l_threefloor">
 
 
-                  <button class="btn btn-link collapsed threefloor l_btn_walking">
+                  <button class="btn btn-link collapsed threefloor l_btn_walking" style="text-decoration: none;">
                     代遛訂單管理
                   </button>
 
@@ -966,7 +975,7 @@
 
 
           <div class="card">
-            <button class="btn btn-link collapsed twofloor l_btn_favorite">
+            <button class="btn btn-link collapsed twofloor l_btn_favorite" style="text-decoration: none;">
               我的最愛
             </button>
 
@@ -975,7 +984,7 @@
           <div class="card">
 
 
-            <button class="btn btn-link collapsed twofloor l_btn_coin">
+            <button class="btn btn-link collapsed twofloor l_btn_coin" style="text-decoration: none;">
               毛金幣管理
             </button>
 
@@ -983,8 +992,8 @@
           </div>
 
           <div class="card">
-            <button type="button" class="btn btn-link collapsed twofloor l_btn_contact" data-toggle="modal"
-              data-target="#exampleModal" data-whatever="@mdo">
+            <button type="button" class="btn btn-link collapsed twofloor l_btn_contact" data-bs-toggle="modal"
+              data-bs-target="#exampleModal" style="text-decoration: none;">
               聯絡客服
             </button>
 
@@ -1137,13 +1146,13 @@
                   <input type="text" class="form-control c_fast_cellphone" placeholder="09XX-XXX-XXX" />
                 </div>
               </div>
-              <div class="form-group row l_add_moible">
+              <div class="form-group row ">
                 <label class="col-sm-3 col-form-label c_form_name">
                   收件地址
                 </label>
-                <div class="col-sm-8 ">
-                  <div id="dis" class="row c_donate_address c_receipt_dis city-selector" role="tw-city-selector"
-                    data-bootstrap-style data-has-zipcode></div>
+                <div class="l_add_moible">
+                  <div id="dis" class="row c_donate_address  city-selector" role="tw-city-selector" data-bootstrap-style
+                    data-has-zipcode></div>
 
                   <input type="text" class="form-control c_receipt_dis c_fast_address" placeholder="復興南路一段390號" />
                 </div>
@@ -3960,11 +3969,11 @@
             <li class="l_walking_end"><a href="#l_walking_order_box">過去訂單</a></li>
 
           </ul>
-          <div class="l_line_box_1">
+          <div class="l_line_box_2">
             <div class="l_bottomline_2">
             </div>
           </div>
-          <div class="l_line_box_1_mobile">
+          <div class="l_line_box_2_mobile">
             <div class="l_bottomline_2_mobile">
             </div>
           </div>
@@ -4817,7 +4826,7 @@
 
 
       <!-- 我的最愛推薦商品  Flickity套件  -->
-      <div class="l_recommend" data-flickity='{ "wrapAround": true }' style="display: none;">
+      <div class="l_recommend" data-flickity='{ "wrapAround": true }' style="opacity: 0;">
 
         <li style="list-style: none;">
           <div class="carousel-cell ">
@@ -5150,9 +5159,7 @@
       <div class="modal-content">
         <div class="modal-header">
           <h5 class="modal-title" id="exampleModalLabel">聯絡我們 Contact</h5>
-          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-            <span aria-hidden="true">&times;</span>
-          </button>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
         <div class="modal-body">
           <form>
@@ -5324,21 +5331,39 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.js"></script>
   <script src="https://netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
 
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-p34f1UUtsS3wqzfto5wAAmdvj+osOnFyQFpp4Ua3gs/ZVWx6oOypYoCJhGGScy+8"
+    crossorigin="anonymous"></script>
+
+  <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js"
+    integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous">
+    </script> -->
+
+  <!-- <script src="./js/0_main/jquery-3.5.1.js"></script> -->
+  <!-- <script src="./js/0_main/bootstrap.bundle.min.js"></script> -->
+
+  <!-- <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+    integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+    crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js"
+    integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut"
+    crossorigin="anonymous"></script>-->
+  <!-- <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js"
+    integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k"
+    crossorigin="anonymous"></script>  -->
+
+
+
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js"
     integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous">
     </script>
 
-  <script src="./js/0_main/jquery-3.5.1.js"></script>
-
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js"
-    integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous">
-    </script>
 
   <script src="./js/0_main/navbar/mobile/custom.js"></script>
   <script src="./js/0_main/navbar/web/custom.js"></script>
 
-  <script src="./js/0_main/bootstrap.bundle.min.js"></script>
 
+  <script src="https://unpkg.com/flickity@2/dist/flickity.pkgd.min.js"></script>
   <script src="./js/0_main/flickity.pkgd.min.js"></script>
 
   <script src="./js/Account/account_main_left.js"></script>
@@ -5353,7 +5378,7 @@
   <script src="./js/Account/Account_mao_coin.js"></script>
   <script src="./js/Account/my_account.js"></script>
 
-  <script src="./js/Account/navbar_user_mobile.js"></script>
+
 
 
 </body>
