會員修改完成

--- a/booking_woof.html
+++ b/booking_woof.html
@@ -732,10 +732,10 @@
                     <svg class="icon icon-bubble">
                         <use xlink:href="./images/index/icomoon/symbol-defs.svg#icon-bubble"></use>
                     </svg>
-
-                    <svg class="icon icon-user2">
-                        <use xlink:href="./images/index/icomoon/symbol-defs.svg#icon-user2"></use>
-                    </svg>
+                    <a href="./my_account.html">
+                        <svg class="icon icon-user2">
+                            <use xlink:href="./images/index/icomoon/symbol-defs.svg#icon-user2"></use>
+                        </svg></a>
 
                     <svg class="icon icon-cart2">
                         <use xlink:href="./images/index/icomoon/symbol-defs.svg#icon-cart2"></use>
