--- a/my_account.html
+++ b/my_account.html
@@ -792,6 +792,7 @@
       <li class="l_btn_order_m " style="list-style: none;"><a href="#l_main_right">訂單管理</a></li>
       <li class="l_btn_favorite_m" style="list-style: none;"><a href="#l_main_right">我的最愛</a></li>
       <li class="l_btn_coin_m " style="list-style: none;"><a href="#l_main_right">毛金幣管理</a></li>
+      <li class="l_sign_out_m " style="list-style: none;"><a href="#">登出</a></li>
     </div>
 
   </div>
@@ -883,6 +884,22 @@
 
                     <button class="btn btn-link collapsed threefloor l_btn_password  " style="text-decoration: none;">
                       更改密碼
+                    </button>
+
+                    <div id="collapseEight" class="collapse" aria-labelledby="headingEight"
+                      data-parent="#accordionExample">
+                      <div class="card-body">
+
+
+
+
+                      </div>
+                    </div>
+                  </div>
+                  <div class="card l_threefloor">
+
+                    <button class="btn btn-link collapsed threefloor l_sign_out  " style="text-decoration: none;">
+                      登出
                     </button>
 
                     <div id="collapseEight" class="collapse" aria-labelledby="headingEight"
