會員加登出

--- a/my_account.html
+++ b/my_account.html
@@ -1116,15 +1116,14 @@
             <div class="l_change_photo_mobile">
               <svg xmlns="http://www.w3.org/2000/svg" width="203" height="66.839" viewBox="0 0 203 66.839">
                 <text id="檔案大小_:_最大1MB_檔案限制_:_.JPEG_.PNG" data-name="檔案大小 : 最大1MB
-                          檔案限制 :  .JPEG , .PNG" transform="translate(58.5 44.839)" fill="#707070" font-size="12"
+                          檔案限制 : .JPEG ,.PNG" transform="translate(58.5 44.839)" fill="#707070" font-size="12"
                   font-family="YuGothicUI-Regular, Yu Gothic UI">
                   <tspan x="0" y="0">檔案大小</tspan>
                   <tspan y="0" xml:space="preserve" font-family="Poppins-Regular, Poppins"> : </tspan>
                   <tspan y="0">最大</tspan>
                   <tspan y="0" font-family="Poppins-Regular, Poppins">1MB</tspan>
                   <tspan x="0" y="18">檔案限制</tspan>
-                  <tspan y="18" xml:space="preserve" font-family="Poppins-Regular, Poppins"> : .JPEG ,
-                    .PNG</tspan>
+                  <tspan y="18" xml:space="preserve" font-family="Poppins-Regular, Poppins"> : .JPEG ,.PNG</tspan>
                 </text>
                 <text id="更換大頭貼照片" transform="translate(17.5 15)" fill="#707070" font-size="14"
                   font-family="YuGothicUI-Regular, Yu Gothic UI">
